--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,13 @@
     <string-array name="string_array">
         <item>Mark</item>
         <item>Icey</item>
+        <item>Hollie</item>
+        <item>Lola</item>
         <item>Jessica</item>
         <item>Sid</item>
         <item>Andrew</item>
         <item>Larry</item>
         <item>July</item>
-        <item>Lola</item>
         <item>Remon</item>
     </string-array>
 </resources>
